--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,40 @@
-
+.rounded-card {
+  border-radius: 8px;
+}
+.p-accordion .p-accordion-tab {
+  box-shadow: none !important;
+}
+.p-accordion .p-accordion-content {
+  border: 1px solid var(--primary-color);
+  border-top: none;
+}
+.p-accordion.accordtion .p-accordion-header .p-accordion-header-link {
+  /* background-color: gray !important;
+  color: white !important; */
+  border: 1px solid var(--primary-color) !important;
+  color: var(--primary-color) !important;
+  border-radius: 4px;
+}
+.p-accordion.accordtion .p-accordion-header {
+  margin-top: 10px;
+}
+.form-btn {
+  width: 100px;
+  height: 40px;
+}
+/* .p-accordion.accordtion
+  .p-accordion-header.p-highlight:hover
+  .p-accordion-header-link {
+  background-color: rgb(143, 143, 143) !important;
+  color: white !important;
+}
+.p-accordion.accordtion
+  .p-accordion-header.p-disabled.p-highlight:hover
+  .p-accordion-header-link {
+  background-color: rgb(143, 143, 143) !important;
+  color: white !important;
+}
+.p-accordion.accordtion .p-accordion-header:hover .p-accordion-header-link {
+  background-color: rgb(143, 143, 143) !important;
+  color: white !important;
+} */
