--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,32 +142,42 @@
                         </div>
                     </p-tabPanel>
                     <p-tabPanel header="PROFESSIONAL">
-                        Content 3
+                        <div class="row">
+                            <div class="col-12">
+                                <p-scrollPanel [style]="{width: '100%', height: '100px'}">
+                                    scroll <br>
+                                    scroll <br>
+                                    scroll <br>
+                                    scroll <br>
+                                    scroll <br>
+                                    scroll <br>
+                                    scroll <br>
+                                    <p-scrollPanel [style]="{width: '50%', height: '50px'}">
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+                                        nested scroll <br>
+
+                                        <div class="form-group row">
+                                            <div class="col-sm-6">
+                                                <label for="scroll-input"
+                                                    class="control-label required">scroll-input</label>
+                                                <input type="text" id="scroll-input" class="form-control"
+                                                    formControlName="scrollInput">
+                                            </div>
+                                        </div>
+                                    </p-scrollPanel>
+
+                                </p-scrollPanel>
+                            </div>
+                        </div>
                     </p-tabPanel>
                 </p-tabView>
-
-                <!-- <div class="form-group">
-                    <div class="col-sm-12">
-                        <p-tabView>
-                            <p-tabPanel header="Diplome">
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <label for="email" class="control-label required">Diplome 1</label>
-                                        <input type="text" id="email" class="form-control" required
-                                            formControlName="diplome1">
-
-                                    </div>
-                                </div>
-                            </p-tabPanel>
-                            <p-tabPanel header="Header 2">
-                                Content 2
-                            </p-tabPanel>
-                            <p-tabPanel header="Header 3">
-                                Content 3
-                            </p-tabPanel>
-                        </p-tabView>
-                    </div>
-                </div> -->
 
 
 
@@ -180,7 +190,6 @@
                             icon="pi pi-undo" iconPos="right"></button>
                     </div>
 
-                    <!-- <button class="btn btn-primary"  >Submit</button> -->
 
                 </div>
             </form>
