--- a/src/app/form-validator/error-list/error-list.component.html
+++ b/src/app/form-validator/error-list/error-list.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="scroll-panel-container">
 
-            <p-scrollPanel [style]="{width: '100%', height: '100%'}">
+            <p-scrollPanel [style]="{width: '100%', height: '100%'}" mousedown-stop-propagation>
                 <div class="error-overlay-list-container">
                     <ng-container *ngFor="let error of errors | filterError:errorName">
                         <div *ngIf="!error.control.valid" [@inOutAnimation] class="error-overlay-list-item"
